This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: test_xml_etree_c leaked [68, 68, 74] references, sum=210
Type: behavior Stage: resolved
Components: Tests Versions: Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: pablogsal, serhiy.storchaka, vstinner
Priority: normal Keywords: patch

Created on 2018-07-25 08:43 by pablogsal, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 8460 merged serhiy.storchaka, 2018-07-25 10:34
Messages (5)
msg322343 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2018-07-25 08:43
Builder x86 Gentoo Refleaks 3.x reports that test_xml_etree_c is potentially leaking references and blocks:

https://buildbot.python.org/all/#builders/1/builds/295

----------------------------------------------------------------------
Ran 148 tests in 0.487s
OK
.
test_xml_etree_c leaked [68, 68, 74] references, sum=210
test_xml_etree_c leaked [51, 52, 52] memory blocks, sum=155
1 test failed again:
    test_xml_etree_c
== Tests result: FAILURE then FAILURE ==
msg322345 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-07-25 10:23
Looks like a regression introduced in issue29209 (02ec92fa7b1dddc23d479ee0b87dc283793505a8).
msg322347 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-07-25 11:52
New changeset ee98e7bbde45fcf24d769353e29337d5ccdbaac5 by Serhiy Storchaka in branch 'master':
bpo-34218: Fix a leak in _elementtree.c introduced in GH-6769. (GH-8460)
https://github.com/python/cpython/commit/ee98e7bbde45fcf24d769353e29337d5ccdbaac5
msg322368 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2018-07-25 16:27
Is this issue really fixed? https://buildbot.python.org/all/#builders/1/builds/295 still detects leaks.
msg322385 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-07-25 18:54
This test was finished 4 hours before the leak was fixed, and a hour before this issue was opened.
History
Date User Action Args
2022-04-11 14:59:03adminsetgithub: 78399
2018-07-25 18:54:36serhiy.storchakasetmessages: + msg322385
2018-07-25 16:27:06vstinnersetnosy: + vstinner
messages: + msg322368
2018-07-25 11:54:45serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-07-25 11:52:48serhiy.storchakasetmessages: + msg322347
2018-07-25 10:34:07serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request7984
2018-07-25 10:23:07serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg322345
2018-07-25 08:43:53pablogsalcreate