bpo-34218: Fix a leak in _elementtree.c introduced in GH-6769. (GH-8460)